--- a/XIVLauncher/Windows/ErrorWindow.xaml
+++ b/XIVLauncher/Windows/ErrorWindow.xaml
@@ -1,5 +1,5 @@
 <Window
-  x:Class="XIVLauncher.Windows.ErrorWindow"
+  x:Uid="Window_1" x:Class="XIVLauncher.Windows.ErrorWindow"
   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,44 +12,44 @@
   Background="{DynamicResource MaterialDesignPaper}"
   TextElement.FontWeight="Medium"
   FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
-  <Grid>
-    <StackPanel>
+  <Grid x:Uid="Grid_1">
+    <StackPanel x:Uid="StackPanel_1">
       <TextBlock
-        Margin="10,10,10,0"
+        x:Uid="TextBlock_1" Margin="10,10,10,0"
         TextWrapping="Wrap"
         Foreground="{DynamicResource MaterialDesignBody}">
         An error in XIVLauncherLite occured. If this issue persists, please report
         it on our Discord.
       </TextBlock>
 
-      <TextBlock x:Name="ContextTextBlock" Margin="10,10,10,0" Foreground="{DynamicResource MaterialDesignBody}" />
+      <TextBlock x:Uid="ContextTextBlock" x:Name="ContextTextBlock" Margin="10,10,10,0" Foreground="{DynamicResource MaterialDesignBody}" />
 
       <StackPanel
-      Orientation="Horizontal">
-        <RichTextBox Margin="10" Width="510" AcceptsReturn="True" IsDocumentEnabled="True"
+      x:Uid="StackPanel_2" Orientation="Horizontal">
+        <RichTextBox x:Uid="ExceptionTextBox" Margin="10" Width="510" AcceptsReturn="True" IsDocumentEnabled="True"
                          IsReadOnly="True"
                          VerticalScrollBarVisibility="Auto" SpellCheck.IsEnabled="False"
                          materialDesign:HintAssist.Hint="Multiline text"
                          Height="110" x:Name="ExceptionTextBox">
           <RichTextBox.Resources>
-            <Style TargetType="{x:Type Border}">
-              <Setter Property="CornerRadius" Value="4" />
+            <Style x:Uid="Style_1" TargetType="{x:Type Border}">
+              <Setter x:Uid="Setter_1" Property="CornerRadius" Value="4" />
             </Style>
           </RichTextBox.Resources>
         </RichTextBox>
-        <materialDesign:PackIcon Kind="Error" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="30" Height="30" Foreground="Red" Margin="10,0,0,0" />
+        <materialDesign:PackIcon x:Uid="materialDesign:PackIcon_1" Kind="Error" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Width="30" Height="30" Foreground="Red" Margin="10,0,0,0" />
       </StackPanel>
     </StackPanel>
 
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 10 10">
+    <StackPanel x:Uid="StackPanel_3" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0 0 10 10">
             <Button Style="{DynamicResource MaterialDesignFlatButton}" HorizontalAlignment="Left"
                     x:Name="DiscordButton" Margin="0,0,5,0" Click="DiscordButton_OnClick">
-                <StackPanel Orientation="Horizontal">
-                    <materialDesign:PackIcon Kind="Discord" />
-                    <TextBlock Margin="8 0 0 0" VerticalAlignment="Center">Join Discord</TextBlock>
+                <StackPanel x:Uid="StackPanel_4" Orientation="Horizontal">
+                    <materialDesign:PackIcon x:Uid="materialDesign:PackIcon_2" Kind="Discord" />
+                    <TextBlock x:Uid="TextBlock_2" Margin="8 0 0 0" VerticalAlignment="Center">Join Discord</TextBlock>
                 </StackPanel>
             </Button>
-            <Button Margin="0,0,0,0" HorizontalAlignment="Right" Click="CloseButton_Click">OK</Button>
+            <Button x:Uid="Button_1" Margin="0,0,0,0" HorizontalAlignment="Right" Click="CloseButton_Click">OK</Button>
     </StackPanel>
   </Grid>
 </Window>
