--- a/XIVLauncher/Windows/FirstTimeSetupWindow.xaml
+++ b/XIVLauncher/Windows/FirstTimeSetupWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="XIVLauncher.Windows.FirstTimeSetup"
+﻿<Window x:Uid="Window_1" x:Class="XIVLauncher.Windows.FirstTimeSetup"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -12,53 +12,53 @@
         Background="{DynamicResource MaterialDesignPaper}"
         TextElement.FontWeight="Medium"
         FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
-    <Grid>
-        <TabControl IsEnabled="True" BorderThickness="0" x:Name="SetupTabControl" Background="{DynamicResource MaterialDesignPaper}">
+    <Grid x:Uid="Grid_1">
+        <TabControl x:Uid="SetupTabControl" IsEnabled="True" BorderThickness="0" x:Name="SetupTabControl" Background="{DynamicResource MaterialDesignPaper}">
             <TabControl.ItemContainerStyle>
-                <Style TargetType="{x:Type TabItem}">
-                    <Setter Property="Visibility" Value="Collapsed"/>
+                <Style x:Uid="Style_1" TargetType="{x:Type TabItem}">
+                    <Setter x:Uid="Setter_1" Property="Visibility" Value="Collapsed"/>
                 </Style>
             </TabControl.ItemContainerStyle>
 
-            <TabItem Header="Path">
-                <Grid>
-                    <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" Foreground="{DynamicResource MaterialDesignBody}">
+            <TabItem x:Uid="TabItem_1" Header="Path">
+                <Grid x:Uid="Grid_2">
+                    <TextBlock x:Uid="TextBlock_1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,10,0,0" Foreground="{DynamicResource MaterialDesignBody}">
                         Please select the folder your game is installed in.
-                        <LineBreak/>
+                        <LineBreak x:Uid="LineBreak_1"/>
                         It should contain the folders "game" and "boot".
                     </TextBlock>
-                    <components:FolderEntry x:Name="GamePathEntry" Description="Select a folder" Margin="10,0,0,60" Width="400" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="{DynamicResource MaterialDesignBody}"/>
-                    <Button Content="Next" Width="79" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10,10" Click="NextButton_Click"/>
+                    <components:FolderEntry x:Uid="GamePathEntry" x:Name="GamePathEntry" Description="Select a folder" Margin="10,0,0,60" Width="400" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="{DynamicResource MaterialDesignBody}"/>
+                    <Button x:Uid="Button_1" Content="Next" Width="79" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10,10" Click="NextButton_Click"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="Dx">
-                <Grid>
-                    <StackPanel Margin="10,10,0,0">
-                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="{DynamicResource MaterialDesignBody}">
+            <TabItem x:Uid="TabItem_2" Header="Dx">
+                <Grid x:Uid="Grid_3">
+                    <StackPanel x:Uid="StackPanel_1" Margin="10,10,0,0">
+                        <TextBlock x:Uid="TextBlock_2" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="{DynamicResource MaterialDesignBody}">
                             Please select, which DirectX version you want to use.
                         </TextBlock>
 
-                        <RadioButton Margin="0, 5, 0, 0" GroupName="dx" IsChecked="True" x:Name="Dx11RadioButton" Foreground="{DynamicResource MaterialDesignBody}">DirectX 11</RadioButton>
-                        <RadioButton GroupName="dx" Foreground="{DynamicResource MaterialDesignBody}">DirectX 9</RadioButton>
+                        <RadioButton x:Uid="Dx11RadioButton" Margin="0, 5, 0, 0" GroupName="dx" IsChecked="True" x:Name="Dx11RadioButton" Foreground="{DynamicResource MaterialDesignBody}">DirectX 11</RadioButton>
+                        <RadioButton x:Uid="RadioButton_1" GroupName="dx" Foreground="{DynamicResource MaterialDesignBody}">DirectX 9</RadioButton>
                     </StackPanel>
-                    <Button Content="Next" Width="79" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10,10" Click="NextButton_Click"/>
+                    <Button x:Uid="Button_2" Content="Next" Width="79" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10,10" Click="NextButton_Click"/>
                 </Grid>
             </TabItem>
-            <TabItem Header="Language">
-                <Grid>
-                    <StackPanel Margin="10,10,10,0">
-                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="{DynamicResource MaterialDesignBody}">
+            <TabItem x:Uid="TabItem_3" Header="Language">
+                <Grid x:Uid="Grid_4">
+                    <StackPanel x:Uid="StackPanel_2" Margin="10,10,10,0">
+                        <TextBlock x:Uid="TextBlock_3" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="{DynamicResource MaterialDesignBody}">
                             Please select, which language you want to load the game with.
                         </TextBlock>
 
-                        <ComboBox SelectedIndex="1" Margin="0, 5, 0, 0" x:Name="LanguageComboBox" Foreground="{DynamicResource MaterialDesignBody}">
-                            <ComboBoxItem>Japanese</ComboBoxItem>
-                            <ComboBoxItem>English</ComboBoxItem>
-                            <ComboBoxItem>German</ComboBoxItem>
-                            <ComboBoxItem>French</ComboBoxItem>
+                        <ComboBox x:Uid="LanguageComboBox" SelectedIndex="1" Margin="0, 5, 0, 0" x:Name="LanguageComboBox" Foreground="{DynamicResource MaterialDesignBody}">
+                            <ComboBoxItem x:Uid="ComboBoxItem_1">Japanese</ComboBoxItem>
+                            <ComboBoxItem x:Uid="ComboBoxItem_2">English</ComboBoxItem>
+                            <ComboBoxItem x:Uid="ComboBoxItem_3">German</ComboBoxItem>
+                            <ComboBoxItem x:Uid="ComboBoxItem_4">French</ComboBoxItem>
                         </ComboBox>
                     </StackPanel>
-                    <Button Content="Next" Width="79" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10,10" Click="NextButton_Click"/>
+                    <Button x:Uid="Button_3" Content="Next" Width="79" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10,10" Click="NextButton_Click"/>
                 </Grid>
             </TabItem>
         </TabControl>
