--- a/XIVLauncher/Windows/PatchHandlerWindow.xaml
+++ b/XIVLauncher/Windows/PatchHandlerWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="XIVLauncher.Windows.PatchHandlerWindow"
+﻿<Window x:Uid="Window_1" x:Class="XIVLauncher.Windows.PatchHandlerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="PatchHandlerWindow" Height="450" Width="800">
-    <Grid>
-        <Button Content="Launch updater" HorizontalAlignment="Left" Height="48" Margin="85,97,0,0" VerticalAlignment="Top" Width="125" Click="LaunchUpdaterButton_OnClick"/>
+    <Grid x:Uid="Grid_1">
+        <Button x:Uid="Button_1" Content="Launch updater" HorizontalAlignment="Left" Height="48" Margin="85,97,0,0" VerticalAlignment="Top" Width="125" Click="LaunchUpdaterButton_OnClick"/>
 
     </Grid>
 </Window>
