--- a/XIVLauncher/Windows/SettingsWindow.xaml
+++ b/XIVLauncher/Windows/SettingsWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="XIVLauncher.Windows.SettingsWindow"
+﻿<Window x:Uid="Window_1" x:Class="XIVLauncher.Windows.SettingsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -15,91 +15,91 @@
         TextElement.FontWeight="Medium"
         FontFamily="pack://application:,,,/MaterialDesignThemes.Wpf;component/Resources/Roboto/#Roboto">
     <Window.Resources>
-        <xaml:StringToColorConverter x:Key="StringToColorConverter"/>
+        <xaml:StringToColorConverter x:Uid="xaml:StringToColorConverter_1" x:Key="StringToColorConverter"/>
     </Window.Resources>
-    <Grid>
-        <dragablz:TabablzControl IsEnabled="True" FixedHeaderCount="6" x:Name="SetupTabControl" Style="{StaticResource MaterialDesignTabablzControlStyle}">
-            <TabItem Header="Game">
-                <StackPanel Margin="10,10,0,0">
-                    <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="{DynamicResource MaterialDesignBody}">
+    <Grid x:Uid="Grid_1">
+        <dragablz:TabablzControl x:Uid="SetupTabControl" IsEnabled="True" FixedHeaderCount="6" x:Name="SetupTabControl" Style="{StaticResource MaterialDesignTabablzControlStyle}">
+            <TabItem x:Uid="TabItem_1" Header="Game">
+                <StackPanel x:Uid="StackPanel_1" Margin="10,10,0,0">
+                    <TextBlock x:Uid="TextBlock_1" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="{DynamicResource MaterialDesignBody}">
                         Please select the folder your game is installed in.
-                        <LineBreak/>
+                        <LineBreak x:Uid="LineBreak_1"/>
                         It should contain the folders "game" and "boot".
                     </TextBlock>
-                    <components:FolderEntry x:Name="GamePathEntry" Description="Select a folder" Width="400" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="{DynamicResource MaterialDesignBody}" Margin="0,5,0,0"/>
-                    <CheckBox Foreground="{DynamicResource MaterialDesignBody}" x:Name="SteamIntegrationCheckBox" Margin="0,15,0,0">Enable Steam integration</CheckBox>
-                    <Label Margin="0,10,0,0">Additional launch arguments</Label>
-                    <TextBox Width="400" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="{DynamicResource MaterialDesignBody}" Margin="0,5,0,0" x:Name="LaunchArgsTextBox"/>
+                    <components:FolderEntry x:Uid="GamePathEntry" x:Name="GamePathEntry" Description="Select a folder" Width="400" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="{DynamicResource MaterialDesignBody}" Margin="0,5,0,0"/>
+                    <CheckBox x:Uid="SteamIntegrationCheckBox" Foreground="{DynamicResource MaterialDesignBody}" x:Name="SteamIntegrationCheckBox" Margin="0,15,0,0">Enable Steam integration</CheckBox>
+                    <Label x:Uid="Label_1" Margin="0,10,0,0">Additional launch arguments</Label>
+                    <TextBox x:Uid="LaunchArgsTextBox" Width="400" VerticalAlignment="Center" HorizontalAlignment="Left" Foreground="{DynamicResource MaterialDesignBody}" Margin="0,5,0,0" x:Name="LaunchArgsTextBox"/>
                 </StackPanel>
             </TabItem>
-            <TabItem Header="DirectX">
-                <StackPanel Margin="10,10,0,0">
-                    <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="{DynamicResource MaterialDesignBody}">
+            <TabItem x:Uid="TabItem_2" Header="DirectX">
+                <StackPanel x:Uid="StackPanel_2" Margin="10,10,0,0">
+                    <TextBlock x:Uid="TextBlock_2" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="{DynamicResource MaterialDesignBody}">
                         Please select which DirectX version you want to use.
                     </TextBlock>
 
-                    <RadioButton Margin="0, 5, 0, 0" GroupName="dx" IsChecked="True" x:Name="Dx11RadioButton" Foreground="{DynamicResource MaterialDesignBody}">DirectX 11</RadioButton>
-                    <RadioButton GroupName="dx" x:Name="Dx9RadioButton" Foreground="{DynamicResource MaterialDesignBody}">DirectX 9</RadioButton>
+                    <RadioButton x:Uid="Dx11RadioButton" Margin="0, 5, 0, 0" GroupName="dx" IsChecked="True" x:Name="Dx11RadioButton" Foreground="{DynamicResource MaterialDesignBody}">DirectX 11</RadioButton>
+                    <RadioButton x:Uid="Dx9RadioButton" GroupName="dx" x:Name="Dx9RadioButton" Foreground="{DynamicResource MaterialDesignBody}">DirectX 9</RadioButton>
                 </StackPanel>
             </TabItem>
-            <TabItem Header="Language">
-                <Grid>
-                    <StackPanel Margin="10,10,10,0">
-                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="{DynamicResource MaterialDesignBody}">
+            <TabItem x:Uid="TabItem_3" Header="Language">
+                <Grid x:Uid="Grid_2">
+                    <StackPanel x:Uid="StackPanel_3" Margin="10,10,10,0">
+                        <TextBlock x:Uid="TextBlock_3" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="{DynamicResource MaterialDesignBody}">
                             Please select which language you want to load the game with.
                         </TextBlock>
 
-                        <ComboBox SelectedIndex="1" Margin="0, 5, 0, 0" x:Name="LanguageComboBox" Foreground="{DynamicResource MaterialDesignBody}">
-                            <ComboBoxItem>Japanese</ComboBoxItem>
-                            <ComboBoxItem>English</ComboBoxItem>
-                            <ComboBoxItem>German</ComboBoxItem>
-                            <ComboBoxItem>French</ComboBoxItem>
+                        <ComboBox x:Uid="LanguageComboBox" SelectedIndex="1" Margin="0, 5, 0, 0" x:Name="LanguageComboBox" Foreground="{DynamicResource MaterialDesignBody}">
+                            <ComboBoxItem x:Uid="ComboBoxItem_1">Japanese</ComboBoxItem>
+                            <ComboBoxItem x:Uid="ComboBoxItem_2">English</ComboBoxItem>
+                            <ComboBoxItem x:Uid="ComboBoxItem_3">German</ComboBoxItem>
+                            <ComboBoxItem x:Uid="ComboBoxItem_4">French</ComboBoxItem>
                         </ComboBox>
                     </StackPanel>
                 </Grid>
             </TabItem>
             
-            <TabItem Header="About">
-                <Grid>
-                    <StackPanel Margin="10,10,10,0">
-                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" x:Name="VersionLabel" Foreground="{DynamicResource MaterialDesignBody}">
-                            FFXIVQuickLauncherLite
+            <TabItem x:Uid="TabItem_6" Header="About">
+                <Grid x:Uid="Grid_6">
+                    <StackPanel x:Uid="StackPanel_9" Margin="10,10,10,0">
+                        <TextBlock x:Uid="VersionLabel" HorizontalAlignment="Left" VerticalAlignment="Top" x:Name="VersionLabel" Foreground="{DynamicResource MaterialDesignBody}">
+                            FFXIVQuickLauncher
                         </TextBlock>
-                        <TextBlock HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="{DynamicResource MaterialDesignBody}">
+                        <TextBlock x:Uid="TextBlock_8" HorizontalAlignment="Left" VerticalAlignment="Top" Foreground="{DynamicResource MaterialDesignBody}">
                             Made by goat. Trimmed by Marot. Special thanks to Mino, LeonBlade and Roy!
-                            <LineBreak/>
+                            <LineBreak x:Uid="LineBreak_4"/>
                         </TextBlock>
 
-                        <Button Style="{DynamicResource MaterialDesignFlatButton}" HorizontalAlignment="Left"
+                        <Button x:Uid="DiscordButton" Style="{DynamicResource MaterialDesignFlatButton}" HorizontalAlignment="Left"
                                 x:Name="DiscordButton" Click="DiscordButton_OnClick"  Margin="0,10,0,0">
-                            <StackPanel Orientation="Horizontal">
-                                <materialDesign:PackIcon Kind="Discord" />
-                                <TextBlock Margin="8 0 0 0" VerticalAlignment="Center">Join Discord</TextBlock>
+                            <StackPanel x:Uid="StackPanel_10" Orientation="Horizontal">
+                                <materialDesign:PackIcon x:Uid="materialDesign:PackIcon_2" Kind="Discord" />
+                                <TextBlock x:Uid="TextBlock_9" Margin="8 0 0 0" VerticalAlignment="Center">Join Discord</TextBlock>
                             </StackPanel>
                         </Button>
-                        <Button Style="{DynamicResource MaterialDesignFlatButton}" HorizontalAlignment="Left"
+                        <Button x:Uid="GitHubButton" Style="{DynamicResource MaterialDesignFlatButton}" HorizontalAlignment="Left"
                                 x:Name="GitHubButton" Click="GitHubButton_OnClick" Margin="0 0 0 0">
-                            <StackPanel Orientation="Horizontal">
-                                <materialDesign:PackIcon Kind="GithubCircle" />
-                                <TextBlock Margin="8 0 0 0" VerticalAlignment="Center">GitHub</TextBlock>
+                            <StackPanel x:Uid="StackPanel_11" Orientation="Horizontal">
+                                <materialDesign:PackIcon x:Uid="materialDesign:PackIcon_3" Kind="GithubCircle" />
+                                <TextBlock x:Uid="TextBlock_10" Margin="8 0 0 0" VerticalAlignment="Center">GitHub</TextBlock>
                             </StackPanel>
                         </Button>
-                        <Button Style="{DynamicResource MaterialDesignFlatButton}" HorizontalAlignment="Left"
+                        <Button x:Uid="OriginalLauncherButton" Style="{DynamicResource MaterialDesignFlatButton}" HorizontalAlignment="Left"
                                 x:Name="OriginalLauncherButton" Click="OriginalLauncherButton_OnClick">
-                            <StackPanel Orientation="Horizontal">
-                                <materialDesign:PackIcon Kind="Launch" />
-                                <TextBlock Margin="8 0 0 0" VerticalAlignment="Center">Start Original Launcher</TextBlock>
+                            <StackPanel x:Uid="StackPanel_13" Orientation="Horizontal">
+                                <materialDesign:PackIcon x:Uid="materialDesign:PackIcon_5" Kind="Launch" />
+                                <TextBlock x:Uid="TextBlock_12" Margin="8 0 0 0" VerticalAlignment="Center">Start Original Launcher</TextBlock>
                             </StackPanel>
                         </Button>
                     </StackPanel>
 
-                    <Image Source="pack://application:,,,/Resources/eye.png" Width="150" HorizontalAlignment="Left" Margin="390,0,0,0" Opacity="0.8" RenderOptions.BitmapScalingMode="HighQuality"/>
+                    <Image x:Uid="Image_1" Source="pack://application:,,,/Resources/eye.png" Width="150" HorizontalAlignment="Left" Margin="390,0,0,0" Opacity="0.8" RenderOptions.BitmapScalingMode="HighQuality"/>
                 </Grid>
             </TabItem>
         </dragablz:TabablzControl>
-        <Button Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}"
+        <Button x:Uid="Button_8" Style="{StaticResource MaterialDesignFloatingActionMiniLightButton}"
                 ToolTip="Save Settings" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="0,0,10,10" Click="AcceptButton_Click">
-            <materialDesign:PackIcon Kind="Check" Height="24" Width="24" />
+            <materialDesign:PackIcon x:Uid="materialDesign:PackIcon_6" Kind="Check" Height="24" Width="24" />
         </Button>
     </Grid>
 </Window>
