--- a/XIVLauncher/Xaml/Components/FileEntry.xaml
+++ b/XIVLauncher/Xaml/Components/FileEntry.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="XIVLauncher.Xaml.Components.FileEntry"
+﻿<UserControl x:Uid="UserControl_1" x:Class="XIVLauncher.Xaml.Components.FileEntry"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <DockPanel>
-        <Button Margin="5,0,0,0" Padding="0" DockPanel.Dock="Right" Width="35" Click="BrowseFolder">...</Button>
-        <TextBox Height="Auto" HorizontalAlignment="Stretch" DockPanel.Dock="Right" 
+    <DockPanel x:Uid="DockPanel_1">
+        <Button x:Uid="Button_1" Margin="5,0,0,0" Padding="0" DockPanel.Dock="Right" Width="35" Click="BrowseFolder">...</Button>
+        <TextBox x:Uid="TextBox_1" Height="Auto" HorizontalAlignment="Stretch" DockPanel.Dock="Right" 
                  Text="{Binding Text, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type UserControl}}}" />
     </DockPanel>
 </UserControl>
