Add account switcher, fix steam account support

--- a/XIVLauncher/Windows/OtpInputDialog.xaml
+++ b/XIVLauncher/Windows/OtpInputDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         mc:Ignorable="d"
-        Title="Configure generic addon" WindowStartupLocation="CenterScreen"
+        Title="Enter OTP key" WindowStartupLocation="CenterScreen"
         Icon="pack://application:,,,/Resources/dalamud_icon.ico" ResizeMode="NoResize"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
         TextElement.FontWeight="Medium"
