--- a/XIVLauncher/Windows/ChangelogWindow.xaml
+++ b/XIVLauncher/Windows/ChangelogWindow.xaml
@@ -6,7 +6,7 @@
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
   xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
   mc:Ignorable="d"
-  Title="XIVLauncher Update" Height="295" Width="598" WindowStartupLocation="CenterScreen"
+  Title="XIVLauncherLite Update" Height="295" Width="598" WindowStartupLocation="CenterScreen"
   Icon="pack://application:,,,/Resources/dalamud_icon.ico" ResizeMode="NoResize"
   TextElement.Foreground="{DynamicResource MaterialDesignBody}"
   Background="{DynamicResource MaterialDesignPaper}"
